Bug 576332. Don't dispatch synthetic mouse move events if our root view has no widget. r=dbaron